frontend/public/scss/common.scss
// sass-lint:disable mixins-before-declarations
body {
  font-size: 16px;
}

h1 {
  font-size: 38px;
  line-height: 38px;
  margin: 0 0 13px;
  font-weight: 700;

  @include media-breakpoint-up(md) {
    font-size: 38px;
    line-height: 52px;
  }

  @include media-breakpoint-down(sm) {
    font-size: 24px;
    line-height: 28px;
  }

}

h2 {
  font-size: 26px;
  font-weight: 600;
  line-height: 28px;
  margin: 0 0 18px;

  @include media-breakpoint-down(sm) {
    font-size: 18px;
    line-height: 22px;
  }
}

h3 {
  font-size: 26px;
  line-height: 26px;
  font-weight: 600;
}

h4 {
  font-size: 16px;
  font-weight: 600;
}

a.link-button {
  display: inline-block;
  padding: 10px;
  text-align: center;
  text-decoration: none;

  &:hover, &:visited {
    text-decoration: none;
  }

  &.red {
    border-radius: 5px;
    background-color: rgb(163, 31, 52);
    color: #ffffff;
  }

  &.light-blue {
    border-radius: 5px;
    background-color: $light-blue;
    color: #ffffff;
  }
}

.form-error {
  color: $primary;
}

.align-text-right {
  text-align: right;
}

.gray-text {
  color: $gray;
}

.light-gray-text {
  color: $label-subtitle;
}

.btn-light-blue {
  background-color: $light-blue !important;
  border-color: $light-blue !important;
  font-size: 20px;
}

.btn-primary {
  color: white;
  font-size: 18px;
  padding: 11px 40px;
  border-radius: 4px;
  border-width: 1px;
  transition: .25s !important;
  font-weight: 600;
  background-color: $brand-button-bg;

  &:hover {
    opacity: 1;
    border: 1px solid $brand-darker-bg;
	  color: $brand-darker-bg;
	  background: linear-gradient(174deg, $tile-background, $tile-background) !important;
  }

  &.large {
    font-size: 20px;
    padding: 17px 50px;
  }

  &.highlight {
    font-size: 20px;
    font-weight: 700;
    line-height: 30px;
    padding: 18px 60px;
    text-decoration: none;
    transition: linear 0.4s;

    &:hover {
      opacity: 1;
    }
  }

  &.outline {
    background-color: #ffffff;
    color: $brand-lighter-bg;
    border: 2px solid $brand-lighter-bg;
    background: linear-gradient(174deg, $tile-background, $tile-background) !important;

    &:hover {
      opacity: 1;
    }
  }
}

a.btn.disabled {
  color: grey;
  border: 2px solid grey;
}

.btn-gradient-red {
  background: linear-gradient(174deg, $brand-darker-bg, $brand-darker-bg) !important;
  border: 1px solid $brand-darker-bg;
}

.btn-denim-blue {
  background-color: $denim-blue;
  border-color: $denim-blue;
  color: white;

  &:hover {
    color: white !important;
  }
}

button.unstyled,
button.btn-secondary.unstyled {
  border: none;
  background-color: inherit;
  color: inherit;
  padding: 0;

  &:hover, &:active, &:not(:disabled):not(.disabled):active {
    background-color: inherit;
    color: inherit;
  }
}

.link-light-blue {
  &, &:hover, &:visited, &:active {
    color: $light-blue;
  }
}

.link-black {
  text-decoration: underline;
  color: black;
  font-weight: bold;
}

.text-ribbon {
  position: relative;
  width: 160px;
  height: 40px;

  svg {
    width: 160px;
    height: 40px;
    -webkit-filter: drop-shadow(-1px 2px 2px rgba(0, 0, 0, 0.4)); // sass-lint:disable-line no-vendor-prefixes
    filter: drop-shadow(-1px 2px 2px rgba(0, 0, 0, 0.4));
    fill: black;
  }

  .text {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    line-height: 40px;
    text-align: center;
    color: white;
  }
}

.card {
  background-color: #ffffff;
  border: 0;
  border-radius: 4px !important;
  box-shadow: 0 1px 0 0 rgb(0 0 0 / 12%);
}

.card-shadow {
  -webkit-box-shadow: -4px 5px 8px 0px rgba(204,204,204,0.8); // sass-lint:disable-line no-vendor-prefixes
  -moz-box-shadow: -4px 5px 8px 0px rgba(204,204,204,0.8); // sass-lint:disable-line no-vendor-prefixes
  box-shadow: -4px 5px 8px 0px rgba(204,204,204,0.8);
}

.card-listing {
  padding: 0;
  margin: 0 -22px;
  list-style: none;
  letter-spacing: -0.32em;

  li {
    letter-spacing: normal;
    display: inline-block;
    vertical-align: top;
  }
}

.highlight-card {
  background: white;
  border-bottom: 3px solid transparent;
  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.23);

  &.clickable:hover {
    border-color: $brand-button-bg;
    box-shadow: 0 2px 15px 4px rgba(0, 0, 0, 0.16);
  }
}

.profile {
  background: url(/static/images/user.svg) left no-repeat;
  height: 120px;
  width: 120px;
}

.dotted {
  border-bottom: 2px dashed #8a8b8c;
  margin-top: 25px;
}

.dropdown-menu {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5), 0 13px 11px 8px rgba(0,0,0,0.12);
  border-color: $white-smoke;
  border-radius: 0;
  padding: 0;

  .dropdown-item {
    display: block;
    padding: .75rem 1rem;
    font-size: 14px;
    line-height: 14px;

    &:active{
      background-color: white;
    }

    &:hover{
      color: $brand-darker-bg;
      background-color: white;
    }


    a, button.unstyled {
      display: block;
      color: $black;
      font-weight: 400;
      font-size: 14px;
      text-align: left;
      text-decoration: none;

      &:hover {
        color: $primary;
      }
    }
  }
}

.link-text {
  color: $black;
  text-decoration: underline;
  box-shadow: none;
  cursor: pointer;
}

.flexible-pricing-head {
  margin-left: 15px;

  h1 {
    font-size: 38px;
    line-height: 38px;
    font-weight: bold;
  }

  p {
    line-height: 24px;
    font-size: 18px;
    font-weight: 100;
  }
}

.flexible-price-certificate-btn {
  float: left;
  margin-top: 28px;
  background-color: #A41E34;
  margin-left: 15px;
  @include media-breakpoint-down(sm) {
    margin-bottom: 100px;
  }
}

.flexible-pricing-form {
  margin-top: 44px;
  margin-left: auto;
  margin-right: auto;
  max-width: 425px;
  padding: 24px 24px 32px 24px !important;
  border-width: 0 !important;

  .auth-header {
    .tell-us-about-your-income {
      font-size: 22px;
      line-height: 22px;
    }
  }

  div {
    button {
      line-height: 59px;
      width: 285px;
      padding: 0 50px !important;
      margin-top: 7px;
    }
  }

  .form-group {
    margin-bottom: 1.5rem;

    input[type=number], select {
      height: 48px;
      max-width: 377px;
    }

    #your_income_label {
      margin-top: 16px;
      font-size: 16px;
      line-height: 16px;
      @include media-breakpoint-down(sm) {
        margin-top: 15px;
      }
    }

    .income_currency_label {
      float: right;
      margin: 5px 0;
      height: 16px;
      width: 192px;
      color: #666666;
      font-size: 14px;
      letter-spacing: 0;
      line-height: 16px;
      text-align: right;

      @include media-breakpoint-down(sm) {
        font-size: 12px;
        margin: -27px 0 0 0;
      }
    }
      /* Chrome, Safari, Edge, Opera */
    #your_income::-webkit-outer-spin-button,
    #your_income::-webkit-inner-spin-button {
      -webkit-appearance: none;
      margin: 0;
    }

    /* Firefox */
    #your_income{
      -moz-appearance: textfield;
    }

    .financial-assist-testify {
      color: grey;
      max-width: 350px;
      line-height: 16px;
      display: inline-flex;
      text-align: left;
      font-size: 14px;
      @include media-breakpoint-down(sm) {
        max-width: 275px;
      }
    }
  }
}

